--- a/___template.html
+++ b/___template.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>scratch garden</title>
+    <title>template</title>
     <style>
       :root {
         --sans-font: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir,
@@ -43,20 +43,18 @@
       body > * {
         grid-column: 2;
       }
-
-      ul li:not(:first-child) {
-        margin-top: 0.25rem;
-      }
-  </style>
+    </style>
   </head>
   <body>
     <main>
-        <h1>Scratch Garden</h1>
-        <ul>
-          <li><a href="what-is-this-site.html">What is this site?</a></li>
-          <li><a href="graph-language.html">Graph language</a></li>
-          <li><a href="brainfuck.html">Brainfuck</a></li>
-        </ul>
+      <h1>Template</h1>
+      <p>
+        write your content
+      </p>
+      <a href="/" >back to home</a>
     </main>
+    <script>
+      // write your code here
+    </script>
   </body>
 </html>
