simple lit graph ui

--- a/index.html
+++ b/index.html
@@ -55,6 +55,7 @@
         <ul>
           <li><a href="what-is-this-site.html">What is this site?</a></li>
           <li><a href="graph-language.html">Graph language</a></li>
+          <li><a href="graph-ui.html">Graph ui</a></li>
           <li><a href="brainfuck.html">Brainfuck</a></li>
         </ul>
     </main>
