--- a/graph-ui.html
+++ b/graph-ui.html
@@ -55,15 +55,11 @@
   <body>
     <main>
       <h1>Graph UI</h1>
+      <board-element></board-element>
       <p>
-        this page is based on this <a href="https://zenn.dev/aishift/articles/4649f6af5d175b">article</a>.
+        This example is based on this <a href="https://zenn.dev/aishift/articles/4649f6af5d175b">article</a>.
       </p>
-      <simple-greeting name="sample"></simple-greeting>
-      <board-element>
-
-      </board-element>
-      <div id="board"></div>
-      <!-- <a href="/" >back to home</a> -->
+      <a href="/" >back to home</a>
     </main>
     <script type="module">
       import {
