--- a/graph-ui.html
+++ b/graph-ui.html
@@ -5,6 +5,13 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>graph ui</title>
     <style>
+      @font-face {
+        font-family: 'FontWithASyntaxHighlighter';
+        src:
+          url('./fonts/FontWithASyntaxHighlighter-Regular.woff2')
+          format('woff2')
+        ;
+      }
       :root {
         --sans-font: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir,
           "Nimbus Sans L", Roboto, "Noto Sans", "Segoe UI", Arial, Helvetica,
@@ -44,11 +51,32 @@
         grid-column: 2;
       }
 
+      main {
+        margin-bottom: 2rem;
+      }
+
+      code,
+      pre {
+        font-family: "FontWithASyntaxHighlighter", monospace;
+      }
+
+      pre {
+        padding: 8px;
+        font-size: 12px;
+        border: 0;
+        overflow: auto;
+        outline: none;
+        background-color: #44444490;
+        color: white;
+        width: 100%;
+        box-sizing: border-box;
+      }
+
       board-element {
         display: block;
         border: 2px solid gray;
         min-height: 40vh;
-        height: 100%;
+        height: 70vh;
       }
     </style>
   </head>
@@ -56,9 +84,16 @@
     <main>
       <h1>Graph UI</h1>
       <board-element></board-element>
+      <br>
       <p>
         This example is based on this <a href="https://zenn.dev/aishift/articles/4649f6af5d175b">article</a>.
       </p>
+      <br>
+      <details>
+        <summary id="loc">show page source</summary>
+        <pre id="pre"></pre>
+      </details>
+      <br>
       <a href="/" >back to home</a>
     </main>
     <script type="module">
@@ -291,11 +326,11 @@
           this.nodes = [
             {
               id: "node1",
-              position: { x: 0, y: 0 },
+              position: { x: 20, y: 200 },
             },
             {
               id: "node2",
-              position: { x: 400, y: 100 },
+              position: { x: 200, y: 100 },
             },
           ]
           this.edges = []
@@ -432,7 +467,13 @@
         }
       }
 
-      customElements.define("board-element", BoardElement);
+      customElements.define("board-element", BoardElement)
+
+      // render source code
+      const pageHtml = document.querySelector("html").outerHTML
+      const loc = pageHtml.split("\n").length
+      document.querySelector("#pre").textContent = pageHtml
+      document.querySelector("#loc").textContent = `show source (${loc} loc)`
     </script>
   </body>
 </html>
