--- a/graph-ui.html
+++ b/graph-ui.html
@@ -16,6 +16,7 @@
         --sans-font: -apple-system, BlinkMacSystemFont, "Avenir Next", Avenir,
           "Nimbus Sans L", Roboto, "Noto Sans", "Segoe UI", Arial, Helvetica,
           "Helvetica Neue", sans-serif;
+        --code-font: "FontWithASyntaxHighlighter", monospace;
         --bg: #f5f7ff;
         --text: #212121;
       }
@@ -57,7 +58,7 @@
 
       code,
       pre {
-        font-family: "FontWithASyntaxHighlighter", monospace;
+        font-family: var(--code-font);
       }
 
       pre {
